Created function of main component. Fixed warning

--- a/app/resources/html/index.html
+++ b/app/resources/html/index.html
@@ -9,5 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <!-- App entry point -->
+        <div id="app"></div>
     </body>
 </html>
